# net-rs

./: .gitignore  Cargo.toml  README.md
examples/: bench_latency.rs  bench_throughput.rs  rdma_client.rs  rdma_echo_client.rs  rdma_echo_server.rs  rdma_server.rs  tcp_echo_client.rs  tcp_echo_server.rs
src/: lib.rs
src/drivers/: mod.rs
src/drivers/rdma/: buffer.rs  cm.rs  context.rs  mod.rs  poller.rs  recv_pool.rs  remote_buf.rs  slab_allocator.rs  transport.rs
src/drivers/rdma/transport/: batch.rs  completion.rs  config.rs  flow_control.rs  mod.rs  protocol.rs  rdma_ops.rs  recv.rs  recv_pool.rs  send.rs  shutdown.rs  types.rs
src/drivers/tcp/: mod.rs  transport.rs  transport_test.rs
src/memory/: mod.rs  remote_buf.rs
src/pool/: manager.rs  mod.rs
src/transport/: framing.rs  mod.rs
tests/: rdma_integration.rs
